<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="40dp"
        android:layout_marginTop="5dp"
        android:layout_height="80dp"
        android:text="@string/header_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/inTheNameOfGod"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:layout_height="100dp"
        android:text="@string/summary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="openGradeCalculator"
        android:text="@string/start" />

    <TextView
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text=""/>

    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/suggestions"/>

    <TextView
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/suggestionsMail"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3517273960705854/3161204729">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
    </ScrollView>